--- a/index.html
+++ b/index.html
@@ -3,21 +3,47 @@
     <head>
         <title>Buddy Support</title>
         <style>
-            * { margin: 0; padding: 0; box-sizing: border-box; }
-            body { font: 13px Helvetica, Arial; }
-            form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-            form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-            form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-            #messages { list-style-type: none; margin: 0; padding: 0; }
-            #messages li { padding: 5px 10px; }
-            #messages li:nth-child(odd) { background: #eee; }
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+
+            body {
+                font: 13px Helvetica, Arial;
+            }
+
+            form {
+                background: #000;
+                padding: 3px;
+                position: fixed;
+                bottom: 0;
+                width: 100%;
+            }
+
+            form input {
+                width: 90%;
+                margin-right: .5%;
+            }
+
+            form button {
+                width: 9%;
+            }
+
+            #messages li {
+                padding: 5px 10px;
+            }
+
+            #messages li:nth-child(odd) {
+                background: #eee;
+            }
         </style>
     </head>
 
     <body>
         <ul id="messages"></ul>
 
-        <form>
+        <form id="messageForm">
             <input id="message"/>
             <button>Send</button>
         </form>
@@ -28,13 +54,16 @@
         <script>
             var socket = io();
 
-            $('form').submit(function(){
-                socket.emit('send message', $('#message').val());
-                $('#message').val('');
+            $('#messageForm').submit(function () {
+                if ($('#message').val().trim() !== "") {
+                    socket.emit('send message', $('#message').val());
+                    $('#messages').append($('<li>').text($('#message').val()));
+                    $('#message').val('');
+                }
                 return false;
             });
 
-            socket.on('receive message', function(msg){
+            socket.on('receive message', function (msg) {
                 $('#messages').append($('<li>').text(msg));
             });
         </script>
